src/tests/routes/trustpub/gitlab_configs/snapshots/integration__routes__trustpub__gitlab_configs__create__token_auth_with_trusted_publishing_scope-2.snap
---
source: src/tests/routes/trustpub/gitlab_configs/create.rs
expression: response.json()
---
{
  "gitlab_config": {
    "crate": "foo",
    "created_at": "[datetime]",
    "environment": null,
    "id": 1,
    "namespace": "rust-lang",
    "namespace_id": null,
    "project": "foo-rs",
    "workflow_filepath": ".gitlab-ci.yml"
  }
}
